//
// Copyright 2017, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.base;

option (type_url_prefix) = "type.spine3.org";
option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "ErrorProto";
option java_package = "org.spine3.base";

import "google/protobuf/struct.proto";

import "spine/annotations.proto";
import "spine/validate/constraint_violation.proto";
import "spine/validate/validation_error.proto";

// Information on a technical error occurred in the system.
//
// See `spine.base.BusinessFailure` for definition of business failure type.
//
message Error {

    // The type of the error.
    //
    // It can be an exception from Java, C# (or another language) or a Proto enum name.
    //
    string type = 1;

    // An integer code resulting from a native code call, or a number from a Proto enum value.
    int32 code = 2;

    // An error indicating that a message did not pass validation.
    validate.ValidationError validation_error = 3;

    reserved 4 to 9;

    // A developer-readable diagnostics message on the error.
    string message = 10;

    // Additional information on the error.
    map<string, google.protobuf.Value> attributes = 11;

    // A stacktrace of an exception (if available).
    string stacktrace = 12;
}
